manifests/logto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logto
  labels:
    app.kubernetes.io/name: logto
    app.kubernetes.io/instance: logto
spec:
  replicas: 1
  strategy:
   type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: logto
      app.kubernetes.io/instance: logto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: logto
        app.kubernetes.io/instance: logto
    spec:
      containers:
        - name: logto
          image: ghcr.io/logto-io/logto:1.25.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
            - name: admin
              containerPort: 3002
              protocol: TCP
          #livenessProbe:
          #  httpGet:
          #    path: /api/status
          #    port: http
          #  initialDelaySeconds: 30
          #  periodSeconds: 10
          #readinessProbe:
          #  httpGet:
          #    path: /api/status
          #    port: http
          #  initialDelaySeconds: 10
          #  periodSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: connectors
              mountPath: /etc/logto/packages/core/connectors
      volumes:
        - name: connectors
          persistentVolumeClaim:
            claimName: logto-connectors
