manifests/logto/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: logto-db-test
  namespace: logto
  labels:
    app.kubernetes.io/name: logto-test
spec:
  containers:
    - name: test
      image: ghcr.io/logto-io/logto:1.25.0
      command: ["/bin/sh", "-c"]
      args: ["sleep infinity"]
  restartPolicy: Never
