manifests/logto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logto
  labels:
    app.kubernetes.io/name: logto
    app.kubernetes.io/instance: logto
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: http
      protocol: TCP
      name: http
    - port: 3002
      targetPort: admin
      protocol: TCP
      name: admin
  selector:
    app.kubernetes.io/name: logto
    app.kubernetes.io/instance: logto
